--- a/prepros-6.config
+++ b/prepros-6.config
@@ -2,9 +2,20 @@
   "name": "devcard",
   "firstRun": false,
   "exportConfig": true,
-  "fileConfigs": [],
+  "fileConfigs": [
+    {
+      "path": "assets/css/theme.scss",
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"assets/css/theme-new.css\",\"autoCompile\":true,\"sourceMap\":false,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+    },
+    {
+      "path": "assets/css/theme1.css",
+      "configJson": "{\"autoCompile\":false,\"forceCompile\":false,\"customOutput\":\"\",\"sourceMap\":false,\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-cssnext\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false},\"outputSuffix\":\"-dist\"}"
+    }
+  ],
   "fileTree": {
-    "expandedDirs": [],
+    "expandedDirs": [
+      "assets/css"
+    ],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
@@ -17,7 +28,15 @@
     ],
     "hideUnwatchedFiles": false
   },
-  "imports": [],
+  "imports": [
+    {
+      "path": "assets/css/theme.scss",
+      "imports": [
+        "assets/css/parts/_resume.scss",
+        "assets/css/parts/_overwrite.scss"
+      ]
+    }
+  ],
   "projectView": {
     "selectedView": "file-tree"
   },
