--- a/prepros-6.config
+++ b/prepros-6.config
@@ -13,9 +13,7 @@
     }
   ],
   "fileTree": {
-    "expandedDirs": [
-      "assets/css"
-    ],
+    "expandedDirs": [],
     "hideSystemFiles": true,
     "systemFiles": [
       ".*",
