--- a/prepros.config
+++ b/prepros.config
@@ -891,10 +891,12 @@
       {
         "file": "assets/css/theme.scss",
         "config": {
-          "autoCompile": true,
-          "sourceMap": false,
-          "compileImported": false,
-          "customOutput": "assets/css/theme-new.css"
+          "customOutput": "assets/css/theme-new.css",
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
         }
       },
       {
